unpackaged/main/default/objects/ETT_Staging_Scrap_Inspection__c/ETT_Staging_Scrap_Inspection__c.object-meta.xml
<CustomObject>
    <label>Staging Scrap Inspection</label>
    <nameField>
        <displayFormat>SN-{0000}</displayFormat>
        <label>Staging  Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Staging Scrap Inspections</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>