unpackaged/main/default/objects/ETT_Staging_Scrap_Inspection__c/fields/ETT_Casing_Brand_lookup__c.field-meta.xml
<CustomField>
    <fullName>ETT_Casing_Brand_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Casing Brand</label>
    <referenceTo>ETT_Brand_Master__c</referenceTo>
    <relationshipLabel>Staging Scrap Inspections</relationshipLabel>
    <relationshipName>Staging_Scrap_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>