unpackaged/main/default/objects/ETT_Staging_Scrap_Inspection__c/fields/ETT_Retreader__c.field-meta.xml
<CustomField>
    <fullName>ETT_Retreader__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Retreader</label>
    <length>255</length>
    <type>Text</type>
</CustomField>