unpackaged/main/default/objects/ETT_Staging_Scrap_Inspection__c/fields/ETT_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Serial_Number__c</fullName>
    <label>Tyre Serial Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>