unpackaged/main/default/objects/ETT_Staging_Scrap_Inspection__c/fields/ETT_Tyre_Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Serial_Number__c</fullName>
    <description>ETT inspected Tyre serial number</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tyre Serial Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>