unpackaged/main/default/objects/ETT_Staging_Scrap_Inspection__c/fields/ETT_Tyre_Size__c.field-meta.xml
<CustomField>
    <fullName>ETT_Tyre_Size__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tyre Size</label>
    <referenceTo>ETT_Tyre_Size_Master__c</referenceTo>
    <relationshipLabel>Staging Scrap Inspections</relationshipLabel>
    <relationshipName>Staging_Scrap_Inspections</relationshipName>
    <type>Lookup</type>
</CustomField>